# appimage-thumbnailer

./: .gitignore  README.md  appimage-thumbnailer  appimage-thumbnailer-test  appimage-thumbnailer.py  appimage-thumbnailer.thumbnailer  appimage-thumbnailer.thumbnailer.in  badge-downloads.json  install.sh  meson.build  meson.options  uninstall
.github/: copilot-instructions.md
.github/cross/: aarch64.txt
.github/scripts/: update-downloads-badge.sh
.github/workflows/: package.yml  update-downloads-badge.yml
dwarfs/: fetch-dwarfs-tools.sh
scripts/: build-squashfs-tools.sh  check-latest-downloads.sh  post-install.sh
squashfs-tools/: build-unsquashfs.sh
src/: appimage-thumbnailer.c  appimage-type.c  appimage-type.h  dwarfs-extract.c  dwarfs-extract.h  main.c  meson.build  squashfs-extract.c  squashfs-extract.h
